--- a/_posts/2024-05-08-1.md
+++ b/_posts/2024-05-08-1.md
@@ -6,11 +6,31 @@ date: 2024-05-08
 
 ## 환영합니다!
 
-안녕하세요! 이곳은 제 첫 번째 블로그 포스트입니다. 오늘부터 이 블로그를 통해 다양한 주제에 대한 글을 공유할 예정입니다.
+안녕하세요! 이곳은 샘플 포스트입니다.
 
-### 블로그 소개
 
-이 블로그는 저의 경험과 생각을 공유하는 공간입니다. 프로그래밍, 기술, 라이프스타일 등 다양한 주제를 다룰 것입니다.
+```python
+# 은행 계좌 클래스
+class BankAccount:
+    def __init__(self, name, balance=0):
+        self.name = name
+        self.balance = balance
+
+    def deposit(self, amount):
+        self.balance += amount
+        print(f"입금 완료: 현재 잔액은 {self.balance}원 입니다.")
+
+    def withdraw(self, amount):
+        if self.balance >= amount:
+            self.balance -= amount
+            print(f"출금 완료: 현재 잔액은 {self.balance}원 입니다.")
+        else:
+            print("잔액이 부족합니다.")
+
+    def get_balance(self):
+        return self.balance
+```
+
 
 
 
