--- a/_posts/2024-05-08-1.md
+++ b/_posts/2024-05-08-1.md
@@ -2,14 +2,20 @@
 layout: single
 title: "첫 번째 블로그 포스트"
 categories: coding
-tag: python
+tag: [python, code, sample]
+toc: true
 ---
 
-## 환영합니다!
-
+## 문구
 안녕하세요! 이곳은 샘플 포스트입니다.
+### 세부 목차1
+### 세부 목차2
+
+### 세부 목차3
 
 
+
+## 코드
 ```python
 # 은행 계좌 클래스
 class BankAccount:
@@ -33,5 +39,7 @@ class BankAccount:
 ```
 
 
+
+## 이미지
 
 ![jpg](../../images/2024-05-08-1/jpg.jpg)
